fix: Experience heading gets cut off

--- a/styles/Timeline.module.scss
+++ b/styles/Timeline.module.scss
@@ -8,9 +8,8 @@
 }
 
 .bg_title {
-  position: fixed;
-  left: 50%;
-  translate: -50%;
+  position: absolute;
+  padding: 0 20px;
   color:rgba(255, 255, 255, 0.1);
   font-size: 7em;
   font-weight: 600;
